--- a/src/locales/ja.json
+++ b/src/locales/ja.json
@@ -4,16 +4,17 @@
   "log_in_with_google": "Googleでログインします",
   "log_in_with_facebook": "Facebookでログインします",
   "log_in_with_phone_number": "電話番号でログインします",
-  "trouble_logging_in?": "ログインするのに問題がありますか？",
+  "trouble_logging_in?": "ログインするのに苦労しますか？",
   "by_clicking_'login',_you_agree_with_our_terms._learn_how_we_process_your_data_in_our": "「ログイン」をクリックすると、条件に同意します。データをどのように処理するかを学びます",
   "privacy_policy": "プライバシーポリシー",
   "and": "と",
   "cookies_policy": "Cookiesポリシー",
   "my_number_is": "私の番号はです",
   "phone_number": "電話番号",
+  "please_enter_a_valid_phone_number": "有効な電話番号を入力して下さい",
   "when_you_tap_'continue',_heartlink_will_send_a_text_with_verification_code._message_and_data_rates_mate_apply.": "「続行」をタップすると、HeartLinkは確認コードを含むテキストを送信します。メッセージとデータレートが適用されます。",
   "the_verified_phone_number_can_be_used_to_log_in.": "検証済みの電話番号を使用してログインできます。",
-  "learn_what_happens_when_your_number_changes": "あなたの番号が変わったときに何が起こるかを学びます",
+  "learn_what_happens_when_your_number_changes.": "あなたの番号が変わったときに何が起こるかを学びます。",
   "continue": "続く",
   "my_code_is": "私のコードはです",
   "please_enter_code_sent_to": "送信されたコードを入力してください",
@@ -25,7 +26,7 @@
   "i_want_to_receive_news,_updates_and_offers_from_heartlink": "ハートリンクからニュース、更新、オファーを受け取りたい",
   "enter_email": "メールアドレスを入力して",
   "welcome_to_heartlink": "ハートリンクへようこそ",
-  "please_follow_our_rules_to_have_more_fun_and_build_a_great_community_together": "私たちのルールに従って、もっと楽しくなり、素晴らしいコミュニティを構築してください",
+  "please_follow_our_rules_to_have_more_fun_and_build_a_great_community_together": "私たちのルールに従って、もっと楽しくなり、一緒に素晴らしいコミュニティを構築してください",
   "be_yourself": "素直になれ",
   "make_sure_your_photos,_age_and_bio_true_to_who_you_are": "あなたの写真、年齢、バイオがあなたが誰であるかに忠実であることを確認してください",
   "stay_safe": "おげんきで",
@@ -36,13 +37,17 @@
   "be_proactive": "積極的に",
   "always_report_bad_behavior": "常に悪い行動を報告してください",
   "i_agree": "同意します",
+  "are_you_sure?": "本気ですか？",
+  "you_will_exit_this_sign-up_process_and_all_your_information_will_be_deleted?": "このサインアッププロセスを終了し、すべての情報が削除されますか？",
+  "cancel": "キャンセル",
+  "apply": "申し込み",
   "my_name_is": "私の名前は",
   "your_name": "あなたの名前",
   "this_is_how_it_will_appear_in_heartlink,_and_you_will_not_able_to_change_it": "これはハートリンクでどのように表示されるかであり、変更することはできません",
   "my_birthday_is": "私の誕生日は",
   "your_age_will_be_public": "あなたの年齢は公開されます",
   "i_am_a": "私は",
-  "show_my_gender_on_my_profile": "私のプロフィールに私の性別を見せてください",
+  "show_{nameInformation}_on_my_profile": "私のプロフィールに{nameinformation}を表示します",
   "my_sexual_orientation_is": "私の性的指向はです",
   "select_up_to_3": "最大3を選択します",
   "skip": "スキップ",
@@ -59,11 +64,13 @@
   "you_location_will_be_used_to_show_potential_matches_near_you.": "あなたの場所は、お近くの潜在的な一致を示すために使用されます。",
   "want_to_avoid_someone_you_know_on_heartlink?": "ハートリンクで知っている人を避けたいですか？",
   "it_is_easy_-_share_your_device's_contact_with_heartlink_when_using_this_feature_to_pick_who_you_want_to_avoid": "簡単です - この機能を使用して避けたい人を選ぶとき、デバイスの連絡先をハートリンクと共有する",
-  "we'll_store_your_locked_contact_to_stop_you_from_seeing_each_other_if_your_contact_has_an_account_with_the_same_information_you_provide._you_can_stop_sharing_with_us_in_your_settings.": "あなたの連絡先があなたが提供するのと同じ情報を持つアカウントを持っている場合、あなたのロックされた連絡先を保存して、お互いに会うのを止めます。あなたはあなたの設定で私たちと共有するのをやめることができます。",
-  "learn_more_here,_including_how_heartlink_process_your_contacts": "ハートリンクが連絡先を処理する方法など、詳細をご覧ください",
-  "share_huy_nguyen_profile": "Huy Nguyenプロファイルを共有します",
-  "report_huy_nguyen": "Huy Nguyenを報告します",
+  "we'll_store_your_blocked_contact_to_stop_you_from_seeing_each_other_if_your_contact_has_an_account_with_the_same_infor_you_provide._you_can_stop_sharing_with_us_in_your_settings.": "連絡先がお互いに会うのを止めるために、ブロックされた連絡先を保存してください。あなたはあなたの設定で私たちと共有するのをやめることができます。",
+  "learn_more_here,_including_how_heartlink_process_your_contacts": "ハートリンクが連絡先を処理する方法を含む詳細をご覧ください",
+  "share_{nameUser}_profile": "共有{nameuser}プロファイル",
+  "see_what_a_friend_thinks": "友達がどう思うか見てください",
+  "report_{nameUser}": "レポート{nameuser}",
   "away": "あちらへ",
+  "my_anthem": "私の国歌",
   "what_is_the_reason_for_your_report?": "あなたのレポートの理由は何ですか？",
   "please_choose_1_reason": "1つの理由を選択してください",
   "we_won't_let_puddink_know_that_you_reported_them": "あなたがそれらを報告したことをPuddinkに知らせません",
@@ -71,9 +78,6 @@
   "would_you_mind_sharing_more_details_with_us?": "詳細を私たちと共有していただけませんか？",
   "add_a_comment": "コメントを追加します",
   "are_you_sure_about_the_content_of_this_report?": "このレポートの内容について確信していますか？",
-  "are_you_sure?": "本気ですか？",
-  "cancel": "キャンセル",
-  "apply": "申し込み",
   "let's_find_people_same_with_your_vibe...": "あなたの雰囲気と同じ人を見つけましょう...",
   "join_now": "今すぐ参加してください",
   "no_thanks": "結構です",
@@ -89,6 +93,35 @@
   "get_supper_like": "夕食を取得します",
   "silver_package": "シルバーパッケージ",
   "gold_package": "ゴールドパッケージ",
+  "get_read_receipt_package": "領収書を読むパッケージを入手してください",
+  "stay_up_to_date": "最新に保つ",
+  "know_when_your_messages_have_been_read_with_read_receipt": "読み取り領収書でメッセージがいつ読まれたかを知る",
+  "most_popular": "最も人気のある",
+  "read_receipt": "領収書を読んでください",
+  "recurring_billing,_cancel_anytime": "請求の繰り返し、いつでもキャンセルします",
+  "get_boost_package": "ブーストパッケージを入手してください",
+  "skip_the_queue": "キューをスキップします",
+  "always_on_top_profile_in_your_area_for_30_mins_to_get_more_matches": "あなたの地域の常に30分間、より多くの試合を得るためにトッププロフィール",
+  "boost_my_profile": "私のプロフィールを後押しします",
+  "get_a_gold_package": "ゴールドパッケージを入手してください",
+  "5_free_supper_like_weekly": "5週間のような5つの無料の夕食",
+  "get_supper_likes_package": "夕食のいいパッケージを入手してください",
+  "stand_out_with_super_like": "スーパーのように際立っています",
+  "3x_chance_to_get_a_match": "3倍の試合をするチャンス",
+  "get_supper_likes": "夕食のいいね",
+  "get_silver_package": "シルバーパッケージを入手してください",
+  "unlimited_likes": "無制限のいいね",
+  "send_as_many_likes_as_you_want": "好きなだけ好きなだけを送ってください",
+  "control_your_profile": "プロフィールを制御します",
+  "limit_what_others_see_with_dating_plus": "他の人がデートプラスで見るものを制限します",
+  "choose_who_sees_you": "誰があなたを見るかを選択してください",
+  "only_be_shown_to_people_you've_liked": "あなたが好きな人にのみ示されます",
+  "like_profile_around_the_world": "世界中のプロフィールのように",
+  "passport_to_anywhere": "どこからでもパスポート",
+  "unlimited_rewinds": "無制限の巻き戻し",
+  "go_back_and_try_again": "戻って、もう一度やり直してください",
+  "turn_off_ads": "広告をオフにします",
+  "have_fun_without_interruptions": "中断することなく楽しんでください",
   "settings": "設定",
   "edit_profile": "プロファイル編集",
   "safety": "安全性",
@@ -128,7 +161,7 @@
   "choose_the_theme_you_like_most": "最も好きなテーマを選択してください",
   "log_out": "ログアウト",
   "delete_account": "アカウントを削除する",
-  "add_video,_pic_or_logo_target_4%_closer_to_completing_your_profile_and_you_may_even_get_more_likes": "ビデオ、写真、またはロゴのターゲットを追加すると、プロフィールの完成に4％近くなり、さらに多くのいいねを得ることができます",
+  "add_video,_pic_or_logo_toget_4%_closer_to_completing_your_profile_and_you_may_even_get_more_likes": "ビデオ、写真、ロゴを追加するには、プロフィールの完成に4％近づいてください。",
   "add_media": "メディアを追加します",
   "upload_photo": "写真をアップする",
   "upload_loop": "ループをアップロードします",
@@ -138,7 +171,7 @@
   "about_me": "私について",
   "about_me_-_maximize_500_words": "私について - 500語を最大化します",
   "interest": "興味",
-  "5_out_of_5": "5つのうち5",
+  "out_of_5": "5つのうち",
   "search_interest": "興味を検索します",
   "dating_purposes": "デートの目的",
   "i'm_looking_for": "を探しています",
@@ -149,6 +182,23 @@
   "the_language_i_know": "私が知っている言語",
   "choose_up_to_5_languages_you_know_and_add_to_your_profile": "あなたが知っている最大5つの言語を選択し、あなたのプロフィールに追加します",
   "basic_information": "基本情報",
+  "add_more_info_so_people_can_see_your_amazing_pictures": "人々があなたの素晴らしい写真を見ることができるように情報を追加してください",
+  "what_is_your_zodiac_sign?": "何座ですか？",
+  "your_education_level?": "あなたの教育レベル？",
+  "do_you_want_to_have_children?": "子供が欲しいですか？",
+  "have_you_been_vaccinated_yet?": "もうワクチン接種を受けましたか？",
+  "what_is_your_personality_type?": "あなたの性格タイプは何ですか？",
+  "what_is_your_communication_style?": "あなたのコミュニケーションスタイルは何ですか？",
+  "when_love,_what_do_you_like_to_receive?": "愛はいつ、何を受け取りたいですか？",
+  "style_of_life": "人生のスタイル",
+  "do_you_have_pets": "ペットがいますか",
+  "are_you_a_smoker?": "あなたは喫煙者ですか？",
+  "do_you_exercise?": "運動しますか？",
+  "do_you_follow_any_diet?": "ダイエットに従っていますか？",
+  "how_active_you_are_on_social_media?": "あなたはソーシャルメディアでどれほど活発ですか？",
+  "how_often_do_you_drink_alcohol?": "どのくらいの頻度でアルコールを飲みますか？",
+  "how_are_your_sleeping_habits?": "あなたの睡眠習慣はどうですか？",
+  "more_lifestyle_information_to_show_everyone_your_best_photos.": "あなたの最高の写真をみんなに示すためのより多くのライフスタイル情報。",
   "zodiac": "ゾディアック",
   "future_family": "将来の家族",
   "education": "教育",
@@ -167,17 +217,23 @@
   "job_title": "職名",
   "add_job_title": "役職を追加します",
   "company": "会社",
+  "add_company": "会社を追加します",
   "school": "学校",
   "add_school": "学校を追加します",
+  "update_information_school": "情報学校を更新します",
+  "school_name": "学校名",
   "living_in": "に住んでいます",
   "show_instagram_photos": "Instagramの写真を表示します",
   "connect_instagram": "Instagramを接続します",
-  "my_anthem": "私の国歌",
+  "choose_an_anthem": "国歌を選択してください",
   "my_top_spotify_artists": "私のトップのSpotifyアーティスト",
   "connect_spotify": "Spotifyを接続します",
   "gender": "性別",
   "sexual_orientation": "性的指向",
+  "show_my_sexual_orientation_on_profile": "プロフィールに私の性的指向を見せてください",
+  "select_to_3": "3に選択します",
   "control_profile": "制御プロファイル",
   "don't_show_my_age": "私の年齢を見せないでください",
-  "don't_show_my_distance": "私の距離を見せないでください"
+  "don't_show_my_distance": "私の距離を見せないでください",
+  "show_{nameScream}_on_my_profile": "私のプロフィールに{namescream}を表示します"
 }
