--- a/src/locales/ko.json
+++ b/src/locales/ko.json
@@ -11,9 +11,10 @@
   "cookies_policy": "쿠키 정책",
   "my_number_is": "내 번호는",
   "phone_number": "전화 번호",
+  "please_enter_a_valid_phone_number": "유효한 전화 번호를 입력하세요",
   "when_you_tap_'continue',_heartlink_will_send_a_text_with_verification_code._message_and_data_rates_mate_apply.": "'계속'을 누르면 HeartLink는 확인 코드와 함께 텍스트를 보냅니다. 메시지 및 데이터 요금 메이트가 적용됩니다.",
   "the_verified_phone_number_can_be_used_to_log_in.": "확인 된 전화 번호를 사용하여 로그인 할 수 있습니다.",
-  "learn_what_happens_when_your_number_changes": "번호가 변경되면 어떻게되는지 알아보십시오",
+  "learn_what_happens_when_your_number_changes.": "번호가 변경되면 어떻게되는지 알아보십시오.",
   "continue": "계속하다",
   "my_code_is": "내 코드입니다",
   "please_enter_code_sent_to": "보낸 코드를 입력하십시오",
@@ -25,7 +26,7 @@
   "i_want_to_receive_news,_updates_and_offers_from_heartlink": "Heartlink에서 뉴스, 업데이트 및 제안을 받고 싶습니다.",
   "enter_email": "이메일을 입력하십시오",
   "welcome_to_heartlink": "Heartlink에 오신 것을 환영합니다",
-  "please_follow_our_rules_to_have_more_fun_and_build_a_great_community_together": "우리의 규칙을 따르십시오. 더 재미있게 보내고 함께 훌륭한 커뮤니티를 구축하십시오",
+  "please_follow_our_rules_to_have_more_fun_and_build_a_great_community_together": "우리의 규칙을 따르십시오. 더 재미있게 보내고 함께 훌륭한 커뮤니티를 구축하십시오.",
   "be_yourself": "자신이 되십시오",
   "make_sure_your_photos,_age_and_bio_true_to_who_you_are": "당신의 사진, 나이 및 바이오가 당신이 누구인지 확인하십시오.",
   "stay_safe": "안전히 계세요",
@@ -36,13 +37,17 @@
   "be_proactive": "적극적으로하십시오",
   "always_report_bad_behavior": "항상 나쁜 행동을보고하십시오",
   "i_agree": "나는 동의한다",
+  "are_you_sure?": "확실합니까?",
+  "you_will_exit_this_sign-up_process_and_all_your_information_will_be_deleted?": "이 가입 프로세스를 종료하면 모든 정보가 삭제됩니까?",
+  "cancel": "취소",
+  "apply": "적용하다",
   "my_name_is": "내 이름은",
   "your_name": "당신의 이름",
   "this_is_how_it_will_appear_in_heartlink,_and_you_will_not_able_to_change_it": "이것이 하트 링크에 ​​나타나는 방법이며 변경할 수 없습니다.",
   "my_birthday_is": "내 생일은",
   "your_age_will_be_public": "당신의 나이는 공개 될 것입니다",
   "i_am_a": "나는",
-  "show_my_gender_on_my_profile": "내 프로필에 내 성별을 보여주십시오",
+  "show_{nameInformation}_on_my_profile": "내 프로필에 {nameinformation}을 표시합니다",
   "my_sexual_orientation_is": "내 성적 취향입니다",
   "select_up_to_3": "최대 3을 선택하십시오",
   "skip": "건너뛰다",
@@ -59,11 +64,13 @@
   "you_location_will_be_used_to_show_potential_matches_near_you.": "귀하의 위치는 근처에 잠재적 인 경기를 보여주는 데 사용됩니다.",
   "want_to_avoid_someone_you_know_on_heartlink?": "Heartlink에서 아는 사람을 피하고 싶습니까?",
   "it_is_easy_-_share_your_device's_contact_with_heartlink_when_using_this_feature_to_pick_who_you_want_to_avoid": "쉽습니다 -이 기능을 사용하여 피하고 싶은 사람을 선택할 때 장치의 Heartlink와의 접촉을 공유하십시오.",
-  "we'll_store_your_locked_contact_to_stop_you_from_seeing_each_other_if_your_contact_has_an_account_with_the_same_information_you_provide._you_can_stop_sharing_with_us_in_your_settings.": "연락처에 귀하가 제공하는 동일한 정보가있는 계정이 있으면 서로를 보지 못하도록 잠긴 연락처를 저장합니다. 당신은 당신의 설정에서 우리와 공유를 중지 할 수 있습니다.",
+  "we'll_store_your_blocked_contact_to_stop_you_from_seeing_each_other_if_your_contact_has_an_account_with_the_same_infor_you_provide._you_can_stop_sharing_with_us_in_your_settings.": "귀하의 연락처에 귀하가 제공하는 동일한 정보가있는 계정이 있으면 서로를 보지 못하도록 차단 된 연락처를 저장하겠습니다. 당신은 당신의 설정에서 우리와 공유를 중지 할 수 있습니다.",
   "learn_more_here,_including_how_heartlink_process_your_contacts": "Heartlink가 연락처를 처리하는 방법을 포함하여 여기에서 자세히 알아보십시오.",
-  "share_huy_nguyen_profile": "Huy Nguyen 프로필을 공유하십시오",
-  "report_huy_nguyen": "Huy Nguyen을보고하십시오",
+  "share_{nameUser}_profile": "{nameuser} 프로파일을 공유하십시오",
+  "see_what_a_friend_thinks": "친구가 어떻게 생각하는지보십시오",
+  "report_{nameUser}": "보고서 {nameuser}",
   "away": "떨어져 있는",
+  "my_anthem": "내 애국가",
   "what_is_the_reason_for_your_report?": "보고서의 이유는 무엇입니까?",
   "please_choose_1_reason": "하나의 이유를 선택하십시오",
   "we_won't_let_puddink_know_that_you_reported_them": "우리는 Puddink에게 당신이 그들을보고했다는 것을 알리지 않을 것입니다",
@@ -71,9 +78,6 @@
   "would_you_mind_sharing_more_details_with_us?": "더 많은 세부 정보를 우리와 공유 하시겠습니까?",
   "add_a_comment": "의견을 추가하다",
   "are_you_sure_about_the_content_of_this_report?": "이 보고서의 내용에 대해 확신하십니까?",
-  "are_you_sure?": "확실합니까?",
-  "cancel": "취소",
-  "apply": "적용하다",
   "let's_find_people_same_with_your_vibe...": "당신의 분위기와 똑같이 사람들을 찾아 보자 ...",
   "join_now": "지금 가입하세요",
   "no_thanks": "고맙지 만 사양 할게",
@@ -89,6 +93,35 @@
   "get_supper_like": "만찬을 받으십시오",
   "silver_package": "실버 패키지",
   "gold_package": "금 패키지",
+  "get_read_receipt_package": "읽기 영수증 패키지를 받으십시오",
+  "stay_up_to_date": "최신 상태를 유지하십시오",
+  "know_when_your_messages_have_been_read_with_read_receipt": "읽기 영수증으로 메시지를 읽은시기를 알고 있습니다.",
+  "most_popular": "가장 인기 많은",
+  "read_receipt": "영수증을 읽으십시오",
+  "recurring_billing,_cancel_anytime": "반복 청구, 언제든지 취소",
+  "get_boost_package": "부스트 패키지를 얻으십시오",
+  "skip_the_queue": "대기열을 건너 뜁니다",
+  "always_on_top_profile_in_your_area_for_30_mins_to_get_more_matches": "더 많은 성냥을 얻기 위해 항상 30 분 동안 해당 지역의 최상위 프로필에",
+  "boost_my_profile": "내 프로필을 높이십시오",
+  "get_a_gold_package": "금 패키지를 얻으십시오",
+  "5_free_supper_like_weekly": "5 주간과 같은 5 개의 무료 저녁",
+  "get_supper_likes_package": "저녁 식사가 좋아하는 패키지를 얻으십시오",
+  "stand_out_with_super_like": "Super Like로 눈에.니다",
+  "3x_chance_to_get_a_match": "경기를 할 수있는 3 배",
+  "get_supper_likes": "저녁 식사를 좋아합니다",
+  "get_silver_package": "실버 패키지를 얻으십시오",
+  "unlimited_likes": "무제한 좋아요",
+  "send_as_many_likes_as_you_want": "원하는만큼 좋아하는 것을 보내십시오",
+  "control_your_profile": "프로필을 제어하십시오",
+  "limit_what_others_see_with_dating_plus": "데이트 플러스로 다른 사람들이 보는 것을 제한하십시오",
+  "choose_who_sees_you": "당신을 보는 사람을 선택하십시오",
+  "only_be_shown_to_people_you've_liked": "당신이 좋아하는 사람들에게만 보여집니다",
+  "like_profile_around_the_world": "전 세계 프로필처럼",
+  "passport_to_anywhere": "어디서나 여권",
+  "unlimited_rewinds": "무제한 되 감이",
+  "go_back_and_try_again": "돌아가서 다시 시도하십시오",
+  "turn_off_ads": "광고를 끄십시오",
+  "have_fun_without_interruptions": "중단없이 재미있게 보내십시오",
   "settings": "설정",
   "edit_profile": "프로필 수정",
   "safety": "안전",
@@ -128,7 +161,7 @@
   "choose_the_theme_you_like_most": "가장 좋아하는 테마를 선택하십시오",
   "log_out": "로그 아웃",
   "delete_account": "계정 삭제",
-  "add_video,_pic_or_logo_target_4%_closer_to_completing_your_profile_and_you_may_even_get_more_likes": "비디오, 사진 또는 로고 목표를 추가하여 프로필을 완성하는 데 4% 더 가까워지면 더 좋아할 수도 있습니다.",
+  "add_video,_pic_or_logo_toget_4%_closer_to_completing_your_profile_and_you_may_even_get_more_likes": "비디오, 사진 또는 로고를 추가하여 프로필을 완성하는 데 4% 더 가까워지면 더 좋아하는 것을 얻을 수도 있습니다.",
   "add_media": "미디어 추가",
   "upload_photo": "사진 업로드",
   "upload_loop": "루프 업로드",
@@ -138,7 +171,7 @@
   "about_me": "나에 대해서",
   "about_me_-_maximize_500_words": "나에 대해 - 500 단어를 극대화하십시오",
   "interest": "관심",
-  "5_out_of_5": "5 중 5 개",
+  "out_of_5": "5 중",
   "search_interest": "검색 관심",
   "dating_purposes": "데이트 목적",
   "i'm_looking_for": "내가 찾고 있어요",
@@ -149,6 +182,23 @@
   "the_language_i_know": "내가 아는 언어",
   "choose_up_to_5_languages_you_know_and_add_to_your_profile": "알고있는 최대 5 개의 언어를 선택하고 프로필에 추가하십시오.",
   "basic_information": "기본 정보",
+  "add_more_info_so_people_can_see_your_amazing_pictures": "사람들이 놀라운 사진을 볼 수 있도록 더 많은 정보를 추가하십시오.",
+  "what_is_your_zodiac_sign?": "당신의 별자리는 무엇입니까?",
+  "your_education_level?": "교육 수준?",
+  "do_you_want_to_have_children?": "아이를 갖고 싶습니까?",
+  "have_you_been_vaccinated_yet?": "아직 예방 접종을 받았습니까?",
+  "what_is_your_personality_type?": "당신의 성격 유형은 무엇입니까?",
+  "what_is_your_communication_style?": "커뮤니케이션 스타일은 무엇입니까?",
+  "when_love,_what_do_you_like_to_receive?": "사랑이있을 때, 당신은 무엇을 받고 싶습니까?",
+  "style_of_life": "삶의 스타일",
+  "do_you_have_pets": "당신은 애완 동물이 있습니까?",
+  "are_you_a_smoker?": "당신은 흡연자입니까?",
+  "do_you_exercise?": "당신은 운동을하십니까?",
+  "do_you_follow_any_diet?": "다이어트를 따르나요?",
+  "how_active_you_are_on_social_media?": "소셜 미디어에서 얼마나 활동적입니까?",
+  "how_often_do_you_drink_alcohol?": "술을 얼마나 자주 마십니까?",
+  "how_are_your_sleeping_habits?": "당신의 수면 습관은 어떻습니까?",
+  "more_lifestyle_information_to_show_everyone_your_best_photos.": "모든 사람에게 최고의 사진을 보여줄 수있는 더 많은 라이프 스타일 정보.",
   "zodiac": "황도 십이궁",
   "future_family": "미래의 가족",
   "education": "교육",
@@ -167,17 +217,23 @@
   "job_title": "직위",
   "add_job_title": "작업 제목 추가",
   "company": "회사",
+  "add_company": "회사 추가",
   "school": "학교",
   "add_school": "학교 추가",
+  "update_information_school": "정보 학교 업데이트",
+  "school_name": "학교 이름",
   "living_in": "살고 있습니다",
   "show_instagram_photos": "인스 타 그램 사진을 보여줍니다",
   "connect_instagram": "Instagram을 연결하십시오",
-  "my_anthem": "내 애국가",
+  "choose_an_anthem": "애국가를 선택하십시오",
   "my_top_spotify_artists": "내 최고의 Spotify 아티스트",
   "connect_spotify": "Spotify를 연결하십시오",
   "gender": "성별",
   "sexual_orientation": "성적 취향",
+  "show_my_sexual_orientation_on_profile": "프로필에 내 성적 취향을 보여주십시오",
+  "select_to_3": "3까지 선택하십시오",
   "control_profile": "제어 프로필",
   "don't_show_my_age": "내 나이를 보여주지 마십시오",
-  "don't_show_my_distance": "내 거리를 보여주지 마십시오"
+  "don't_show_my_distance": "내 거리를 보여주지 마십시오",
+  "show_{nameScream}_on_my_profile": "내 프로필에 {namescream}을 표시합니다"
 }
