--- a/src/locales/vi.json
+++ b/src/locales/vi.json
@@ -11,14 +11,15 @@
   "cookies_policy": "Chính sách cookie",
   "my_number_is": "Số của tôi là",
   "phone_number": "Số điện thoại",
+  "please_enter_a_valid_phone_number": "Xin vui lòng nhập một số điện thoại hợp lệ",
   "when_you_tap_'continue',_heartlink_will_send_a_text_with_verification_code._message_and_data_rates_mate_apply.": "Khi bạn nhấn 'Tiếp tục', HeartLink sẽ gửi một văn bản với mã xác minh. Thông điệp và tốc độ dữ liệu áp dụng.",
   "the_verified_phone_number_can_be_used_to_log_in.": "Số điện thoại được xác minh có thể được sử dụng để đăng nhập.",
-  "learn_what_happens_when_your_number_changes": "Tìm hiểu những gì xảy ra khi số của bạn thay đổi",
+  "learn_what_happens_when_your_number_changes.": "Tìm hiểu những gì xảy ra khi số của bạn thay đổi.",
   "continue": "Tiếp tục",
   "my_code_is": "Mã của tôi là",
   "please_enter_code_sent_to": "Vui lòng nhập mã được gửi đến",
   "resend_code": "Mã gửi lại",
-  "invalid_code._please_try_again": "Mã không hợp lệ. vui lòng thử lại",
+  "invalid_code._please_try_again": "Mã không hợp lệ. Vui lòng thử lại",
   "what's_your_email?": "Email của bạn là gì?",
   "don't_lose_access_to_your_account,_verify_your_email": "Đừng mất quyền truy cập vào tài khoản của bạn, xác minh email của bạn",
   "verify_instantly_by_connecting_your_google_account": "Xác minh ngay lập tức bằng cách kết nối tài khoản Google của bạn",
@@ -36,13 +37,17 @@
   "be_proactive": "Được chủ động",
   "always_report_bad_behavior": "Luôn báo cáo hành vi xấu",
   "i_agree": "tôi đồng ý",
+  "are_you_sure?": "Bạn có chắc không?",
+  "you_will_exit_this_sign-up_process_and_all_your_information_will_be_deleted?": "Bạn sẽ thoát khỏi quá trình đăng ký này và tất cả thông tin của bạn sẽ bị xóa?",
+  "cancel": "Hủy bỏ",
+  "apply": "Áp dụng",
   "my_name_is": "Tên tôi là",
   "your_name": "Tên của bạn",
   "this_is_how_it_will_appear_in_heartlink,_and_you_will_not_able_to_change_it": "Đây là cách nó sẽ xuất hiện trong Heartlink và bạn sẽ không thể thay đổi nó",
   "my_birthday_is": "Ngày sinh nhật tôi là",
   "your_age_will_be_public": "Tuổi của bạn sẽ được công khai",
   "i_am_a": "tôi là",
-  "show_my_gender_on_my_profile": "Hiển thị giới tính của tôi trên hồ sơ của tôi",
+  "show_{nameInformation}_on_my_profile": "Hiển thị {nameinformation} trên hồ sơ của tôi",
   "my_sexual_orientation_is": "Xu hướng tình dục của tôi là",
   "select_up_to_3": "Chọn tối đa 3",
   "skip": "Nhảy",
@@ -59,11 +64,13 @@
   "you_location_will_be_used_to_show_potential_matches_near_you.": "Vị trí của bạn sẽ được sử dụng để hiển thị các trận đấu tiềm năng gần bạn.",
   "want_to_avoid_someone_you_know_on_heartlink?": "Bạn muốn tránh một người mà bạn biết trên Heartlink?",
   "it_is_easy_-_share_your_device's_contact_with_heartlink_when_using_this_feature_to_pick_who_you_want_to_avoid": "Thật dễ dàng - Chia sẻ liên hệ của thiết bị với Heartlink khi sử dụng tính năng này để chọn người bạn muốn tránh",
-  "we'll_store_your_locked_contact_to_stop_you_from_seeing_each_other_if_your_contact_has_an_account_with_the_same_information_you_provide._you_can_stop_sharing_with_us_in_your_settings.": "Chúng tôi sẽ lưu trữ liên hệ bị khóa của bạn để ngăn bạn nhìn thấy nhau nếu liên hệ của bạn có tài khoản có cùng thông tin bạn cung cấp. Bạn có thể ngừng chia sẻ với chúng tôi trong cài đặt của bạn.",
+  "we'll_store_your_blocked_contact_to_stop_you_from_seeing_each_other_if_your_contact_has_an_account_with_the_same_infor_you_provide._you_can_stop_sharing_with_us_in_your_settings.": "Chúng tôi sẽ lưu trữ liên hệ bị chặn của bạn để ngăn bạn nhìn thấy nhau nếu liên hệ của bạn có tài khoản có cùng một thông tin bạn cung cấp. Bạn có thể ngừng chia sẻ với chúng tôi trong cài đặt của bạn.",
   "learn_more_here,_including_how_heartlink_process_your_contacts": "Tìm hiểu thêm ở đây, bao gồm cả cách thức xử lý trái tim của các liên hệ của bạn",
-  "share_huy_nguyen_profile": "Chia sẻ hồ sơ Huy Nguyen",
-  "report_huy_nguyen": "Báo cáo Huy Nguyen",
+  "share_{nameUser}_profile": "Chia sẻ {nameuser} Hồ sơ",
+  "see_what_a_friend_thinks": "Xem những gì một người bạn nghĩ",
+  "report_{nameUser}": "Báo cáo {nameuser}",
   "away": "xa",
+  "my_anthem": "QUỐC CA CỦA TÔI",
   "what_is_the_reason_for_your_report?": "Lý do cho báo cáo của bạn là gì?",
   "please_choose_1_reason": "Vui lòng chọn 1 lý do",
   "we_won't_let_puddink_know_that_you_reported_them": "Chúng tôi sẽ không để Puddink biết rằng bạn đã báo cáo chúng",
@@ -71,9 +78,6 @@
   "would_you_mind_sharing_more_details_with_us?": "Bạn có phiền chia sẻ thêm chi tiết với chúng tôi không?",
   "add_a_comment": "Thêm một bình luận",
   "are_you_sure_about_the_content_of_this_report?": "Bạn có chắc chắn về nội dung của báo cáo này?",
-  "are_you_sure?": "Bạn có chắc không?",
-  "cancel": "Hủy bỏ",
-  "apply": "Áp dụng",
   "let's_find_people_same_with_your_vibe...": "Hãy tìm mọi người giống với sự rung cảm của bạn ...",
   "join_now": "Tham gia ngay",
   "no_thanks": "KHÔNG, CÁM ƠN",
@@ -89,6 +93,35 @@
   "get_supper_like": "Nhận bữa ăn tối như",
   "silver_package": "Gói bạc",
   "gold_package": "Gói vàng",
+  "get_read_receipt_package": "Nhận gói biên lai đọc",
+  "stay_up_to_date": "Ở lại đến ngày",
+  "know_when_your_messages_have_been_read_with_read_receipt": "Biết khi nào tin nhắn của bạn đã được đọc với biên lai đọc",
+  "most_popular": "PHỔ BIẾN NHẤT",
+  "read_receipt": "Đọc công thức",
+  "recurring_billing,_cancel_anytime": "Thanh toán định kỳ, hủy bất cứ lúc nào",
+  "get_boost_package": "Nhận gói Boost",
+  "skip_the_queue": "Bỏ qua hàng đợi",
+  "always_on_top_profile_in_your_area_for_30_mins_to_get_more_matches": "Luôn ở trên hồ sơ hàng đầu trong khu vực của bạn trong 30 phút để có được nhiều trận đấu hơn",
+  "boost_my_profile": "Tăng cường hồ sơ của tôi",
+  "get_a_gold_package": "Nhận gói vàng",
+  "5_free_supper_like_weekly": "5 Bữa tối miễn phí như hàng tuần",
+  "get_supper_likes_package": "Nhận gói thích ăn tối",
+  "stand_out_with_super_like": "Nổi bật với siêu thích",
+  "3x_chance_to_get_a_match": "Cơ hội 3x để có được một trận đấu",
+  "get_supper_likes": "Nhận lượt thích ăn tối",
+  "get_silver_package": "Nhận gói bạc",
+  "unlimited_likes": "Thích không giới hạn",
+  "send_as_many_likes_as_you_want": "Gửi bao nhiêu lượt thích như bạn muốn",
+  "control_your_profile": "Kiểm soát hồ sơ của bạn",
+  "limit_what_others_see_with_dating_plus": "Giới hạn những gì người khác nhìn thấy với hẹn hò cộng với",
+  "choose_who_sees_you": "Chọn ai nhìn thấy bạn",
+  "only_be_shown_to_people_you've_liked": "Chỉ được hiển thị cho những người bạn thích",
+  "like_profile_around_the_world": "Thích hồ sơ trên khắp thế giới",
+  "passport_to_anywhere": "Hộ chiếu đến bất cứ đâu",
+  "unlimited_rewinds": "Tua lại không giới hạn",
+  "go_back_and_try_again": "Quay lại và thử lại",
+  "turn_off_ads": "Tắt quảng cáo",
+  "have_fun_without_interruptions": "Vui chơi mà không bị gián đoạn",
   "settings": "Cài đặt",
   "edit_profile": "Chỉnh sửa hồ sơ",
   "safety": "SỰ AN TOÀN",
@@ -128,7 +161,7 @@
   "choose_the_theme_you_like_most": "Chọn chủ đề bạn thích nhất",
   "log_out": "ĐĂNG XUẤT",
   "delete_account": "XÓA TÀI KHOẢN",
-  "add_video,_pic_or_logo_target_4%_closer_to_completing_your_profile_and_you_may_even_get_more_likes": "Thêm video, pic hoặc logo mục tiêu 4% gần hơn để hoàn thành hồ sơ của bạn và bạn thậm chí có thể nhận được nhiều lượt thích hơn",
+  "add_video,_pic_or_logo_toget_4%_closer_to_completing_your_profile_and_you_may_even_get_more_likes": "Thêm video, pic hoặc logo toget gần hơn để hoàn thành hồ sơ của bạn và bạn thậm chí có thể nhận được nhiều lượt thích hơn",
   "add_media": "Thêm phương tiện truyền thông",
   "upload_photo": "Tải ảnh lên",
   "upload_loop": "Tải lên vòng lặp",
@@ -138,7 +171,7 @@
   "about_me": "VỀ TÔI",
   "about_me_-_maximize_500_words": "Về tôi - tối đa hóa 500 từ",
   "interest": "QUAN TÂM",
-  "5_out_of_5": "5 trên 5",
+  "out_of_5": "ngoài 5",
   "search_interest": "Tìm kiếm lãi",
   "dating_purposes": "Mục đích hẹn hò",
   "i'm_looking_for": "Tôi đang tìm kiếm",
@@ -149,6 +182,23 @@
   "the_language_i_know": "Ngôn ngữ tôi biết",
   "choose_up_to_5_languages_you_know_and_add_to_your_profile": "Chọn tối đa 5 ngôn ngữ bạn biết và thêm vào hồ sơ của bạn",
   "basic_information": "THÔNG TIN CƠ BẢN",
+  "add_more_info_so_people_can_see_your_amazing_pictures": "Thêm thông tin để mọi người có thể xem hình ảnh tuyệt vời của bạn",
+  "what_is_your_zodiac_sign?": "Cung hoàng đạo của bạn là gì?",
+  "your_education_level?": "Trình độ học vấn của bạn?",
+  "do_you_want_to_have_children?": "Bạn muốn có con không?",
+  "have_you_been_vaccinated_yet?": "Bạn đã được tiêm phòng chưa?",
+  "what_is_your_personality_type?": "Loại tính cách của bạn là gì?",
+  "what_is_your_communication_style?": "Phong cách giao tiếp của bạn là gì?",
+  "when_love,_what_do_you_like_to_receive?": "Khi tình yêu, bạn thích nhận gì?",
+  "style_of_life": "Phong cách sống",
+  "do_you_have_pets": "Bạn có thú cưng không",
+  "are_you_a_smoker?": "Bạn có phải là người nghiện thuốc lá?",
+  "do_you_exercise?": "Ban co tap the duc khong?",
+  "do_you_follow_any_diet?": "Bạn có làm theo bất kỳ chế độ ăn kiêng?",
+  "how_active_you_are_on_social_media?": "Bạn hoạt động như thế nào trên phương tiện truyền thông xã hội?",
+  "how_often_do_you_drink_alcohol?": "Bạn có thường xuyên uống chất có cồn?",
+  "how_are_your_sleeping_habits?": "Thói quen ngủ của bạn thế nào?",
+  "more_lifestyle_information_to_show_everyone_your_best_photos.": "Thêm thông tin về lối sống để hiển thị cho mọi người những bức ảnh đẹp nhất của bạn.",
   "zodiac": "Zodiac",
   "future_family": "Gia đình tương lai",
   "education": "Giáo dục",
@@ -167,19 +217,23 @@
   "job_title": "Tiêu đề công việc",
   "add_job_title": "Thêm tiêu đề công việc",
   "company": "CÔNG TY",
+  "add_company": "Thêm công ty",
   "school": "TRƯỜNG HỌC",
   "add_school": "Thêm trường học",
+  "update_information_school": "Cập nhật trường thông tin",
+  "school_name": "Tên trường",
   "living_in": "SỐNG Ở",
   "show_instagram_photos": "Hiển thị ảnh Instagram",
   "connect_instagram": "Kết nối Instagram",
-  "my_anthem": "QUỐC CA CỦA TÔI",
+  "choose_an_anthem": "Chọn một bài hát",
   "my_top_spotify_artists": "Các nghệ sĩ Spotify hàng đầu của tôi",
   "connect_spotify": "Kết nối Spotify",
   "gender": "GIỚI TÍNH",
   "sexual_orientation": "Xu hướng tình dục",
+  "show_my_sexual_orientation_on_profile": "Hiển thị xu hướng tình dục của tôi trên hồ sơ",
+  "select_to_3": "Chọn thành 3",
   "control_profile": "Hồ sơ kiểm soát",
   "don't_show_my_age": "Đừng thể hiện tuổi tác của tôi",
   "don't_show_my_distance": "Đừng hiển thị khoảng cách của tôi",
-  "undefined": "Bài kiểm tra",
-  "show_{name}_profile": "show {name} profile"
+  "show_{nameScream}_on_my_profile": "Hiển thị {nameCream} trên hồ sơ của tôi"
 }
