--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -123,7 +123,7 @@
   "turn_off_ads": "Turn Off Ads",
   "have_fun_without_interruptions": "Have fun without interruptions",
   "settings": "SETTINGS",
-  "edit_profile": "Edit Profile",
+  "edit_profile": "EDIT PROFILE",
   "safety": "SAFETY",
   "complete": "complete",
   "global": "Global",
